# Maestro

./: .env.example  .gitignore  ARCHITECTURE.md  MAESTRO_BUILD_PLAN.md  README.md  conftest.py  graph.mmd  pyproject.toml
data/: eval_cases.jsonl
docs/: architecture.md  implementation_plan.md  product_design.md  requirement.md
maestro/: __init__.py  config.py  graph.py  llm.py  logging_config.py  loop_control.py  resilience.py  scheduler.py  serve.py  state.py  supervisor.py  trace.py
maestro/agents/: __init__.py  analyst.py  base.py  critic.py  researcher.py  writer.py
maestro/memory/: __init__.py  longterm.py  working.py
maestro/tools/: __init__.py  registry.py  retrieve.py  web_search.py
scripts/: demo_cases.py  render_graph.py
tests/: test_agents.py  test_critic_loop.py  test_decomposition.py  test_graph.py  test_loop_control.py  test_memory.py  test_parallelism.py  test_recovery.py  test_resilience.py  test_serve.py  test_trace.py  test_writer.py
viewer/: index.html
