[project]
name = "maestro"
version = "0.1.0"
description = "A supervisor-orchestrated multi-agent system with visible delegation and recovery, built on LangGraph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krishiv Saini" }]

dependencies = [
    # --- orchestration ---
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    # --- data / config ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # --- resilience ---
    "tenacity>=8.3.0",
    # --- tools ---
    "ddgs>=6.0.0",
    # --- long-term memory (local, free) ---
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    # --- service ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]
viz = [
    # graph rendering (Day 13). draw_mermaid_png can also use the mermaid.ink API.
    "grandalf>=0.8",
]

[project.scripts]
maestro-serve = "maestro.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maestro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
# uv manages the environment; `uv sync` generates uv.lock (committed for reproducibility).
